--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -165,6 +165,9 @@
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 🌎</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.save_BGI_float') }}">Save Floating 💾</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session_ajax') }}">Clear Site Cookies</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('analysis.Client_trades_form') }}">Individual Client Trades</a></li>
+
+
                   </ul>
                 </li>
             {% endif %}
