--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -137,9 +137,9 @@
 
                     <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
                     <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change User Group</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V1.9/">Daily Change Spread ⭐</a></li>
+                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Daily_Change_Spread_V2.0/">Daily Change Spread ⭐</a></li>
                     <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread [External]</a></li>
+                    <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V2.0/">Daily Change Spread [External]</a></li>
                     <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
                     <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/NFP_Change_Spread_V1.4/">NFP Spread Change [External] </a></li>
                     <div class="dropdown-divider"></div>
@@ -178,11 +178,21 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/18XuEl5m2NNItX5R5Qjsy_Qc9MZSZMuIYvYyQMqtY9Fc/edit?usp=sharing">MT4 Trading Timing ⌚</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1q9rK6i5kkbBM-xBg__aLX09AJExm26ffxwEtdq5c1YI/edit?usp=sharing">MT5 Trading Timing ⌚</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/18XuEl5m2NNItX5R5Qjsy_Qc9MZSZMuIYvYyQMqtY9Fc/edit?usp=sharing">MT4 Trading Timing ⌚ (Not Editable)</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1q9rK6i5kkbBM-xBg__aLX09AJExm26ffxwEtdq5c1YI/edit?usp=sharing">MT5 Trading Timing ⌚ (Not Editable)</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Risk Demo Login 🔑</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1sw-KXU0oKk7un4qHPLIAIg4sUa6rgWMMosJcpH7wmFk/edit?usp=sharing">Cambodia Swaps</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+
+
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1aQ4bhEIkGkCyUBpT24ZspYrTxn_KP6ew42epM1CXITc/edit?usp=sharing">Withdrawal needs approval</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1DeH5oOq6TNwfRPxTPUEDvHnbwfWbDH40RNY8fr3SvRg/edit?usp=sharing">Risk System Emails</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Other Brokers Login</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+
+
                   </ul>
                 </li>
             {% endif %}
