--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -345,7 +345,33 @@
 
                 </ul>
               </li>
-              <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
+
+              <li class="nav-item dropleft">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Tableau
+                </a>
+                <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
+                  <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
+                  <div class="dropdown-divider"></div>
+                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Symbol Alert</a></li>
+                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/SYMBOLALERTHOURLYVOLUME2/AlertBoard?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Symbol Alert(view all profitable trades)</a></li>
+                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/ClientAnalysis/Dashboard1?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Client Analysis</a></li>
+                  <li><a class="dropdown-item" href="http://202.88.105.5/#/views/Deposit-Withdrawal/MainDW?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">Deposit-Withdrawal</a></li>
+                  <div class="dropdown-divider"></div>
+
+                  <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/Yesterday_PNLVOL?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link/">Yesterday: Revenue & Volume by Entity</a></li>
+                  <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/CLUBS?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">General View From Yesterday Trades</a></li>
+
+
+
+
+
+                </ul>
+              </li>
+
+
+
+
 
 
               <li class="nav-item dropdown">
