Checking of datatables is the issue in IOS
javascript issue

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -162,6 +162,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">Symbol Floating 🎶 </a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float1') }}">Symbol Floating1 🎶 </a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 🌎</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.save_BGI_float') }}">Save Floating 💾</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session_ajax') }}">Clear Site Cookies</a></li>
