--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -182,7 +182,7 @@
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1q9rK6i5kkbBM-xBg__aLX09AJExm26ffxwEtdq5c1YI/edit?usp=sharing">MT5 Trading Timing ⌚ (Not Editable)</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Risk Demo Login 🔑</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1sw-KXU0oKk7un4qHPLIAIg4sUa6rgWMMosJcpH7wmFk/edit?usp=sharing">Cambodia Swaps</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1sw-KXU0oKk7un4qHPLIAIg4sUa6rgWMMosJcpH7wmFk/edit#gid=0">Cambodia Swaps</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
 
 
