--- a/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
+++ b/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
@@ -236,9 +236,9 @@
     //   }
 
 
-      function numberWithCommas(x) {
-        return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
-      }
+      // function numberWithCommas(x) {
+      //   return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
+      // }
 
       function Check_Time_Offset(){
           var d = new Date();
