--- a/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
+++ b/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
@@ -255,138 +255,137 @@
           //alert("d_day = " + d_day + "  e_day = " + e_day);
       }
 
-    //
-    //   function return_Time_String(){
-    //
-    //       var e = new Date();
-    //       var timeSone_OffSet = e.getTimezoneOffset();
-    //       UTC_Offset_Change = (-1 * UTC_Timing_Fixed) + timeSone_OffSet;
-    //       var d = new Date(e.getTime() + UTC_Offset_Change*60*1000);        // Get SGT
-    //
-    //
-    //       var day = d.getDay();            // 0 - 6
-    //
-    //       var month = d.getMonth();        // 0-11
-    //       var year = d.getFullYear();     // yyyy
-    //
-    //
-    //       var hr = pad(d.getHours(),2);            // 0-23
-    //       var min = pad(d.getMinutes(),2);        // 0-59
-    //       var sec = pad(d.getSeconds(),2);         // 0-59
-    //       var date = pad(d.getDate(),2);
-    //
-    //       var day_name = ["Sun" ,"Mon", "Tue", "Wed", "Thu", "Fri", "Sat" ];
-    //       var mon_name = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "July", "Aug", "Sep", "Oct", "Nov","Dec"];
-    //
-    //       var Date_String = "";
-    //       Date_String = day_name[day] + " " + year + "-" +  mon_name[month] + "-" + date + " " + hr+":"+min+":"+sec;
-    //       return Date_String;
-    //   }
-    //
-    //   function pad(number, length) {
-    //
-    //       var str = '' + number;
-    //       while (str.length < length) {
-    //           str = '0' + str;
-    //       }
-    //       return str;
-    //   }
-    //
-    //
-    //   function Custom_Ajax_Error(xhr,status,error,error_card_id){
-    //
-    //       var current_html = $('#' + error_card_id).html();   // To display the error. First, we need to store the HTML as we want to append.
-    //       current_html += "------------------------- ↓" + return_Time_String() + " ↓------------------------<br>";
-    //       current_html += "Ajax Response: " + JSON.stringify(xhr) + "<br>";
-    //       current_html += "status: " + status + "<br>";
-    //       current_html += "Error: " + error['message'] + "<br>" + error['stack'] + "<br><br>";
-    //       $('#' + error_card_id ).html(current_html);  // Put it back into the Card.
-    //
-    //       // Want to Log the time as well here.
-    //       console.log(return_Time_String());
-    //       console.log(xhr);
-    //       console.log(xhr["responseText"]);
-    //       console.log(status);
-    //       console.log(error);
-    //   }
-    //
-    //
-    //   function Table1_Update() {
-    //
-    //       //clearInterval(SetInterval_LP_Details);
-    //       $( "#btn_refresh_page" ).removeClass( "btn-warning" );
-    //       $( "#btn_refresh_page" ).addClass( "btn-info" );
-    //       var Post_Data = { };
-    //       Custom_Ajax_Call(Post_Data, "{{ ajax_url }}", "Data_table_Div1", "Table1_Raw", "Table1_Raw_Error", '{{ Table_name }}', ["Update Slow"] );
-    //   }
-    //
-    //
-    //   // Custom the AJAX Call. To store it into the correct table.
-    //   // Post_Data - The data that needs to be posted
-    //   // ajax_url - The Ajax URL to be posted to
-    //   // table_id - Table ID that data needs to be placed
-    //   // raw_return_id - Raw Return ID to be placed in the card
-    //   // error_card_id - Error ID to be placed in the card
-    //   // table_caption - Table caption to be shown
-    //   // zero_out - Need to Zero out the table (To make it a shorter table)
-    //   // Table_Alert_Word - Words that would cause the cell in the table to be red.
-    //
-    //   function Custom_Ajax_Call(Post_Data, ajax_url, table_id, raw_return_id, error_card_id, table_caption, Table_Alert_Word ) {
-    //       //Increment_counter = 0;  // To stop the count.
-    //       $.ajax({
-    //           url:ajax_url,
-    //           data    : Post_Data,
-    //           type: 'POST',
-    //           //async: false,
-    //           dataType: "JSON",
-    //           timeout: 30*1000,
-    //           success: function(data){
-    //           data;
-    //           table_id;
-    //
-    //           var below_table =  '<div class="left-text small-text bg-light p-1 m-1"> <table class="table table-sm"><tbody>';
-    //           below_table += '<tr><th scope="row">Refresh time</th><td>' + return_Time_String() + '</td></tr>';
-    //
-    //           if (data.length >= 3) {
-    //             below_table += '<tr><th scope="row">Country [Floating]  Refresh</th><td>' + data[1] + '</td></tr>';
-    //             below_table += '<tr><th scope="row">Country [Yesterday] Refresh</th><td>' + data[2] + '</td></tr>';
-    //             //below_table += "<br>Country [Floating]  Refresh: " + responseData[1];
-    //             //below_table += "<br>Country [Yesterday] Refresh: " + responseData[2];
-    //           }
-    //
-    //           below_table += "</tbody> </table></div>";
-    //
-    //
-    //           $('#' + table_id ).html(Draw_Table(data[0], "{{ Table_name }}" , "table compact  table-hover table-sm table-responsive-sm table-bordered bg-light large_text_table basic_table", ["Update Slow"] , {{ replace_words }}, "Data_table_Div1_table" ) + below_table);
-    //           $('#' + raw_return_id).html(JSON.stringify(data));
-    //         }, error: function(xhr,status,error){
-    //               //console.log( "Into the Error Function. " );
-    //
-    //               var current_html = $('#' + error_card_id).html();   // To display the error. First, we need to store the HTML as we want to append.
-    //               current_html += "-------------------------------------------------<br>";
-    //               current_html += "Ajax Response: " + JSON.stringify(xhr) + "<br>";
-    //               current_html += "status: " + status + "<br>";
-    //               current_html += "Error: " + error['message'] + "<br>" + error['stack'] + "<br>";
-    //               $('#' + error_card_id ).html(current_html);  // Put it back into the Card.
-    //
-    //               // Want to Log the time as well here.
-    //               console.log(xhr);
-    //               console.log(xhr["responseText"]);
-    //               console.log(status);
-    //               console.log(error);
-    //         }, complete: function(xhr,status){
-    //               //console.log( "Into the complete Function. " );
-    //               //console.log(xhr);
-    //               //console.log(status);
-    //
-    //               $( "#btn_refresh_page" ).addClass( "btn-warning" );
-    //               $( "#btn_refresh_page" ).removeClass( "btn-info" );
-    //               Increment_counter = 1; // To restart the count
-    //         }
-    //     });
-    //   }
-    //$('#btn_refresh_page').click(Table1_Update);
 
+      function return_Time_String(){
+
+          var e = new Date();
+          var timeSone_OffSet = e.getTimezoneOffset();
+          UTC_Offset_Change = (-1 * UTC_Timing_Fixed) + timeSone_OffSet;
+          var d = new Date(e.getTime() + UTC_Offset_Change*60*1000);        // Get SGT
+
+
+          var day = d.getDay();            // 0 - 6
+
+          var month = d.getMonth();        // 0-11
+          var year = d.getFullYear();     // yyyy
+
+
+          var hr = pad(d.getHours(),2);            // 0-23
+          var min = pad(d.getMinutes(),2);        // 0-59
+          var sec = pad(d.getSeconds(),2);         // 0-59
+          var date = pad(d.getDate(),2);
+
+          var day_name = ["Sun" ,"Mon", "Tue", "Wed", "Thu", "Fri", "Sat" ];
+          var mon_name = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "July", "Aug", "Sep", "Oct", "Nov","Dec"];
+
+          var Date_String = "";
+          Date_String = day_name[day] + " " + year + "-" +  mon_name[month] + "-" + date + " " + hr+":"+min+":"+sec;
+          return Date_String;
+      }
+
+      function pad(number, length) {
+
+          var str = '' + number;
+          while (str.length < length) {
+              str = '0' + str;
+          }
+          return str;
+      }
+
+
+      function Custom_Ajax_Error(xhr,status,error,error_card_id){
+
+          var current_html = $('#' + error_card_id).html();   // To display the error. First, we need to store the HTML as we want to append.
+          current_html += "------------------------- ↓" + return_Time_String() + " ↓------------------------<br>";
+          current_html += "Ajax Response: " + JSON.stringify(xhr) + "<br>";
+          current_html += "status: " + status + "<br>";
+          current_html += "Error: " + error['message'] + "<br>" + error['stack'] + "<br><br>";
+          $('#' + error_card_id ).html(current_html);  // Put it back into the Card.
+
+          // Want to Log the time as well here.
+          console.log(return_Time_String());
+          console.log(xhr);
+          console.log(xhr["responseText"]);
+          console.log(status);
+          console.log(error);
+      }
+
+
+      function Table1_Update() {
+
+          //clearInterval(SetInterval_LP_Details);
+          $( "#btn_refresh_page" ).removeClass( "btn-warning" );
+          $( "#btn_refresh_page" ).addClass( "btn-info" );
+          var Post_Data = { };
+          Custom_Ajax_Call(Post_Data, "{{ ajax_url }}", "Data_table_Div1", "Table1_Raw", "Table1_Raw_Error", '{{ Table_name }}', ["Update Slow"] );
+      }
+
+
+      // Custom the AJAX Call. To store it into the correct table.
+      // Post_Data - The data that needs to be posted
+      // ajax_url - The Ajax URL to be posted to
+      // table_id - Table ID that data needs to be placed
+      // raw_return_id - Raw Return ID to be placed in the card
+      // error_card_id - Error ID to be placed in the card
+      // table_caption - Table caption to be shown
+      // zero_out - Need to Zero out the table (To make it a shorter table)
+      // Table_Alert_Word - Words that would cause the cell in the table to be red.
+
+      function Custom_Ajax_Call(Post_Data, ajax_url, table_id, raw_return_id, error_card_id, table_caption, Table_Alert_Word ) {
+          //Increment_counter = 0;  // To stop the count.
+          $.ajax({
+              url:ajax_url,
+              data    : Post_Data,
+              type: 'POST',
+              //async: false,
+              dataType: "JSON",
+              timeout: 30*1000,
+              success: function(data){
+              data;
+              table_id;
+
+              var below_table =  '<div class="left-text small-text bg-light p-1 m-1"> <table class="table table-sm"><tbody>';
+              below_table += '<tr><th scope="row">Refresh time</th><td>' + return_Time_String() + '</td></tr>';
+
+              if (data.length >= 3) {
+                below_table += '<tr><th scope="row">Country [Floating]  Refresh</th><td>' + data[1] + '</td></tr>';
+                below_table += '<tr><th scope="row">Country [Yesterday] Refresh</th><td>' + data[2] + '</td></tr>';
+                //below_table += "<br>Country [Floating]  Refresh: " + responseData[1];
+                //below_table += "<br>Country [Yesterday] Refresh: " + responseData[2];
+              }
+
+              below_table += "</tbody> </table></div>";
+
+
+              $('#' + table_id ).html(Draw_Table(data[0], "{{ Table_name }}" , "table compact  table-hover table-sm table-responsive-sm table-bordered bg-light large_text_table basic_table", ["Update Slow"] , {{ replace_words }}, "Data_table_Div1_table" ) + below_table);
+              $('#' + raw_return_id).html(JSON.stringify(data));
+            }, error: function(xhr,status,error){
+                  //console.log( "Into the Error Function. " );
+
+                  var current_html = $('#' + error_card_id).html();   // To display the error. First, we need to store the HTML as we want to append.
+                  current_html += "-------------------------------------------------<br>";
+                  current_html += "Ajax Response: " + JSON.stringify(xhr) + "<br>";
+                  current_html += "status: " + status + "<br>";
+                  current_html += "Error: " + error['message'] + "<br>" + error['stack'] + "<br>";
+                  $('#' + error_card_id ).html(current_html);  // Put it back into the Card.
+
+                  // Want to Log the time as well here.
+                  console.log(xhr);
+                  console.log(xhr["responseText"]);
+                  console.log(status);
+                  console.log(error);
+            }, complete: function(xhr,status){
+                  //console.log( "Into the complete Function. " );
+                  //console.log(xhr);
+                  //console.log(status);
+
+                  $( "#btn_refresh_page" ).addClass( "btn-warning" );
+                  $( "#btn_refresh_page" ).removeClass( "btn-info" );
+                  Increment_counter = 1; // To restart the count
+            }
+        });
+      }
+    $('#btn_refresh_page').click(Table1_Update);
 
   });
 
