--- a/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
+++ b/Risk_Aaron/app/templates/Webworker_Symbol_Float_noDatatable.html
@@ -70,7 +70,7 @@
 
 
     // Call it for initial run.
-    //Table1_Update();
+    Table1_Update();
 
 
       // Try Catch Block to catch if string can be parsed as json.
