--- a/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border.html
@@ -363,9 +363,8 @@
           }
 
     function numberWithCommas(x) {
-      return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
+      return x.toLocaleString(undefined, {maximumFractionDigits:4})
     }
-
 
     function Check_Time_Offset(){
         var d = new Date();
