--- a/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border_tableHtml.html
+++ b/Risk_Aaron/app/templates/Webworker_Single_Table_No_Border_tableHtml.html
@@ -361,7 +361,7 @@
           }
 
     function numberWithCommas(x) {
-      return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
+      return x.toLocaleString(undefined, {maximumFractionDigits:4})
     }
 
 
