Country Float, put "flip" PnL Group into a list for .find()

--- a/Risk_Aaron/app/templates/Webworker_Country_Float.html
+++ b/Risk_Aaron/app/templates/Webworker_Country_Float.html
@@ -171,7 +171,7 @@
 
 
       if (responseData.length >= 3) {
-        below_table += '<tr><th scope="row">Country [Floating]  Refresh (GMT + 8)/th><td>' + responseData[1] + '</td></tr>';
+        below_table += '<tr><th scope="row">Country [Floating]  Refresh (GMT + 8)</th><td>' + responseData[1] + '</td></tr>';
         below_table += '<tr><th scope="row">Country [Yesterday] Refresh (GMT + 8)</th><td>' + responseData[2] + '</td></tr>';
         //below_table += "<br>Country [Floating]  Refresh: " + responseData[1];
         //below_table += "<br>Country [Yesterday] Refresh: " + responseData[2];
