--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -401,7 +401,14 @@
                       // }else{
                       //   sString += numberWithCommas(table_Data[x][xx]);
                       // }
-                      sString += numberWithCommas(table_Data[x][xx]);
+
+                      if ((typeof(xx) == 'string') && (xx.toLowerCase() == "login")) {  // If the key is string and if it's login
+                            // If it is, we don't want to write in commas.
+                            sString += table_Data[x][xx]; // Just the pure form of number.
+                        } else{
+                          sString += numberWithCommas(table_Data[x][xx]); // Else, put commas for ease of reading
+                        }
+
 
                     }else
                     {
@@ -623,7 +630,9 @@
 
 
  {% for key, value in Table_name.items() %}
-  {% if "H" in value %}
+  {% if "Hs" in value %}
+  <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div{{ loop.index  }}">
+  {% elif "H" in value %}
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div{{ loop.index  }}">
   {% elif "V" in value %}
     <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div{{ loop.index  }}">
