--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -402,7 +402,7 @@
                       //   sString += numberWithCommas(table_Data[x][xx]);
                       // }
 
-                      if ((typeof(xx) == 'string') && (xx.toLowerCase() == "login")) {  // If the key is string and if it's login
+                      if ((typeof(xx) == 'string') && ((xx.toLowerCase() == "login")) ||  (xx.toLowerCase() == "ticket") ) {  // If the key is string and if it's login
                             // If it is, we don't want to write in commas.
                             sString += table_Data[x][xx]; // Just the pure form of number.
                         } else{
@@ -536,8 +536,14 @@
         } );
       }
 
+      var remove_wait_gif=0;
       var myWorker = new Worker(blobURL);
       myWorker.onmessage = function(e){
+
+        if (remove_wait_gif == 0){
+          $('#Please_wait_Gif').html(" ");  // Remove the Gif for please wait.
+          remove_wait_gif = 1;
+        }
 
 
         if (e.data instanceof Object){  // If it is an object, we loop thru and add it to the correct container/Div
@@ -640,10 +646,7 @@
   <!-- Would read as P for value.  -->
     <div class="chart col-lg-6 col-md-6 col-sm-12" id="plot{{ loop.index  }}">
   {% endif %}
-
-   {% include '_pleaseWait.html' %}
  </div>
-
 
  <!--
  <h1>Key: {{key}}</h1>
@@ -651,6 +654,7 @@
 
   {% endfor %}
 
+  <div class="col-lg-12 col-md-12 col-sm-12" id="Please_wait_Gif">  {% include '_pleaseWait.html' %}  </div>
 
   <br>
   {% if description %}
