--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -29,7 +29,8 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 
-
+<!-- For Tableau Stuff -->
+<script type='text/javascript' src='http://202.88.105.5/javascripts/api/viz_v1.js'></script>
 
 
 <script type="javascript/worker" id="my_first_worker">
@@ -641,18 +642,34 @@
   {% elif "H" in value %}
     <div class="col-lg-12 col-md-12 col-sm-12" id="Data_table_Div{{ loop.index  }}">
   {% elif "V" in value %}
-    <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div{{ loop.index  }}">
+    <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div{{ loop.index  }}" style="margin-left:auto;margin-right:auto;">
   {% else %}
   <!-- Would read as P for value.  -->
     <div class="chart col-lg-6 col-md-6 col-sm-12" id="plot{{ loop.index  }}">
   {% endif %}
  </div>
 
+
  <!--
  <h1>Key: {{key}}</h1>
  <h2>Value: {{value}}</h2> -->
 
   {% endfor %}
+
+  {% if symbol %}
+
+   <div class='tableauPlaceholder' style='width: 2560px; height: 1194px;'>
+     <object class='tableauViz' width='2560' height='1194' style='display:none;'>
+       <param name='host_url' value='http%3A%2F%2F202.88.105.5%2F' />
+       <param name='embed_code_version' value='3' />
+       <param name='site_root' value='' />
+       <param name='name' value='Yesterday_Trades_0617&#47;CLUBS&#47;Aaron&#47;a14418cb-188d-45db-8e34-ac92c5952e6c' />
+       <param name='tabs' value='yes' />
+       <param name='toolbar' value='yes' />
+       <param name='filter' value='Type~na={{symbol}}' />
+       <param name='filter' value='BOOK3~na=B' />
+       <param name='showAppBanner' value='false' /></object></div>
+  {% endif %}
 
   <div class="col-lg-12 col-md-12 col-sm-12" id="Please_wait_Gif">  {% include '_pleaseWait.html' %}  </div>
 
@@ -713,6 +730,9 @@
 {% endfor %}
 
 {% endblock %}
+
+
+
 
 
 {% block navbar_button %}
