Updated A book for LP details (Global Prime)

--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -678,7 +678,7 @@
        <param name='tabs' value='yes' />
        <param name='toolbar' value='yes' />
        <param name='filter' value='Type~na={{symbol}}' />
-       <param name='filter' value='BOOK3~na=B' />
+       <param name='filter' value='BOOK3~na={{ book }}' />
        <param name='showAppBanner' value='false' /></object></div>
   {% endif %}
 
