Updating Base, to add in Global Prime.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -323,6 +323,22 @@
                   <li><a class="dropdown-item" href="https://backoffice.cfhclearing.com">CFH Back Office</a></li>
                 </ul>
               </li>
+
+
+              <li class="nav-item dropleft">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <b>Global Prime</b> Web
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                  <li><a class="dropdown-item" href="https://secure.globalprime.com/AccountGP">GP Client Portal</a></li>
+                  <li><a class="dropdown-item" href="https://www.globalprime.com/account/product-alerts/">GP Product Alert</a></li>
+                  <li><a class="dropdown-item" href="https://www.globalprime.com/trading-conditions/spreads/">GP Spread</a></li>
+
+                </ul>
+              </li>
+
+
+
               <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1U9qHiJyITUoXqsFDX9hL19i1zWQbTNedpb474X0n93U/edit#gid=0">MT5 Symbol Creation (BO and Risk)</a></li>
 
 
